deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moor
  labels:
    app.kubernetes.io/name: moor
    app.kubernetes.io/component: namespace
